name:                dive
version:             0.1.0.0
synopsis:            A roguelike.
description:         A small roguelike.
homepage:            https://github.com/hesselink/dive
license:             BSD3
license-file:        LICENSE
author:              Erik Hesselink
maintainer:          hesselink@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <4.8
                     , containers
                     , fclabels
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Dive.Actions
                       Dive.GameState
  ghc-options:         -Wall

executable dive
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , dive
                     , containers
                     , fclabels
                     , mtl
                     , vty
  default-language:    Haskell2010
  hs-source-dirs:      exe
  ghc-options:         -threaded -Wall
